CHANGELOG
=========
v2.25.05
-------
Switched teacher Comment field in approval view from plain to rich text

v2.25.04
-------
Fixed bug causing left students to show in unit approval view

v2.25.03
-------
Fixed massively pink bug introducted in v2.25.01

v2.25.02
-------
Set collapsed smart blocks to fade closed for more reliable H5P loading

v2.25.01
-------
Added new pink label colour for student units with status Exempt

v2.25.00
-------
Added (v28 dependent) ability for teachers to edit their own comments within 48 hours

v2.24.00
-------
Added new report showing notifications for unread comments

v2.23.01
-------
Switched to simplied Outcomes tab in unit details view for Big Data Schools
Added setting for Introductory text in Outcomes tab in unit details view
Fixed CSS issue introduced in last release

v2.23.00
-------
Transferred ownership from Ross Parker to Gibbon Foundation

v5.22.13
--------
Wrapped interface string "Outline" for translation

v5.22.12
--------
Fixed the no-prerequisite fix from last version

v5.22.11
--------
Fixed no-prerequisite edit issue
Fixed no-map issue on fresh installs

v5.22.10
--------
Fixed author and prerequisite export/import issues

v5.22.09
--------
Added external authors to new author editing function
Fixed the bug preventing users from editing untis in their own learning area

v5.22.08
--------
Fixed the bug to manage units according to the Learning Area

v5.22.07
--------
Added the ability to modify authors of a unit

v5.22.06
--------
Removed Copy Block feature from Add/Edit unit for Big Data Schools

v5.22.05
--------
Improved Learning Activity graphing

v5.22.04
--------
Learning Area filter fix

v5.22.03
--------
Adjusted Stacked Bar Chart to exclude inactive units

v5.22.02
--------
Removed bulk Lock/Unlock from Manage Units_learningAreas

v5.22.01
--------
Restricted parent and student dashboard hooks to current year's data

v5.22.00
--------
Added Unit History chart option
Updated Afrikaans translations
