@@ -3,6 +3,7 @@ CHANGELOG
 v2.25.05
 -------
 Switched teacher Comment field in approval view from plain to rich text
+Removed non-reportable teachers and assistants from submission notifications
 
 v2.25.04
 -------
